--- a/assets/css/creative.css
+++ b/assets/css/creative.css
@@ -214,6 +214,7 @@ header .header-content .header-content-inner p {
 @media(min-width:768px) {
     header {
         min-height: 100%;
+        height: inherit;
     }
 
     header .header-content {
